fix(grid): add full-bleed example and remove extra classes

--- a/packages/grid/examples/basic/styles.scss
+++ b/packages/grid/examples/basic/styles.scss
@@ -65,3 +65,8 @@ h6 {
 .bx--grid--condensed .inside {
   background: #3d3d3d;
 }
+
+.full-bleed-example {
+  background-color: #3d3d3d;
+  color: white;
+}
